--- a/Aight/app/build.gradle
+++ b/Aight/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.google.android.gms:play-services-maps:7.5.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
-
+    compile 'com.google.android.gms:play-services:7.5.0'
 }
