event query works, only showing events that haven't expired

--- a/Aight/app/build.gradle
+++ b/Aight/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile fileTree(dir: 'libs', include: 'bolts-android-1.2.0.jar')
+    compile fileTree(include: 'bolts-android-1.2.0.jar', dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
 }
