--- a/Aight/app/src/main/AndroidManifest.xml
+++ b/Aight/app/src/main/AndroidManifest.xml
@@ -34,13 +34,9 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="nl.mprog.rutger.aight.Welcome"
-            android:label="@string/aight"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name=".Welcome"
+            android:label="@string/aight" >
         </activity>
         <activity
             android:name=".MapsActivity"
@@ -51,10 +47,32 @@
             android:name=".CreateEvent"
             android:label="@string/title_activity_create_event"
             android:parentActivityName=".MapsActivity" >
+        </activity>
+        <activity
+            android:name=".LogIn"
+            android:label="@string/title_activity_log_in"
+            android:parentActivityName=".Welcome" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="nl.mprog.rutger.aight.MapsActivity" />
+                android:value="nl.mprog.rutger.aight.Welcome" />
         </activity>
+        <activity
+            android:name=".SignUp"
+            android:label="@string/title_activity_sign_up"
+            android:parentActivityName=".Welcome" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.mprog.rutger.aight.Welcome" />
+        </activity>
+        <activity
+            android:name=".LoggedInCheck"
+            android:label="@string/aight" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
