--- a/Aight/app/build.gradle
+++ b/Aight/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(include: 'bolts-android-1.2.0.jar', dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
 }
