--- a/Aight/app/src/main/AndroidManifest.xml
+++ b/Aight/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -111,8 +111,7 @@
             </intent-filter>
         </receiver>
 
-        <!-- CUSTOM PUSH ICON
-        <!-<meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/push_icon"/>-->
+        <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/ic_push"/>
     </application>
 
 </manifest>
