--- a/Aight/app/src/main/AndroidManifest.xml
+++ b/Aight/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
     <uses-permission android:name="nl.mprog.rutger.aight.permission.C2D_MESSAGE" />
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -49,34 +50,34 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".Welcome"
+            android:name=".WelcomeActivity"
             android:label="@string/aight" >
         </activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName=".Welcome" >
+            android:parentActivityName=".WelcomeActivity" >
         </activity>
         <activity
-            android:name=".CreateEvent"
+            android:name=".CreateEventActivity"
             android:label="@string/title_activity_create_event"
             android:parentActivityName=".MapsActivity" >
         </activity>
         <activity
-            android:name=".LogIn"
+            android:name=".LogInActivity"
             android:label="@string/title_activity_log_in"
-            android:parentActivityName=".Welcome" >
+            android:parentActivityName=".WelcomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="nl.mprog.rutger.aight.Welcome" />
+                android:value=".WelcomeActivity" />
         </activity>
         <activity
-            android:name=".SignUp"
+            android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
-            android:parentActivityName=".Welcome" >
+            android:parentActivityName=".WelcomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="nl.mprog.rutger.aight.Welcome" />
+                android:value=".WelcomeActivity" />
         </activity>
         <activity
             android:name=".LoggedInCheck"
